--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Select ONE Additional
       <div>
         <h2 id="start">How it started.</h2>
         <img
-          class="pic" src="AbstractFace_Unit6Project.jpg"
+          class="pic" src="https://i.redd.it/imbx244ganid1.jpeg"
         />
       </div>
       <div>
